--- a/style.css
+++ b/style.css
@@ -21,13 +21,14 @@ body {
     position: relative;
 }
 
-/* Botones de control */
+/* Botones de control (para el logo en la esquina superior izquierda y el menú) */
 .control-buttons {
     position: fixed;
     top: 20px;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    padding: 0 10px;
 }
 
 h1 {
@@ -88,17 +89,21 @@ footer {
 }
 
 .logo {
-    margin-bottom: 20px;
     border: 2px solid #ff00ff;
     padding: 10px;
     display: inline-block;
     border-radius: 5px;
 }
 
+.center-logo {
+    margin-bottom: 20px;
+}
+
+.top-logo {
+    margin: 0;
+}
+
 .dropdown {
-    position: absolute;
-    top: 10px;
-    right: 10px;
     display: inline-block;
 }
 
